force-app/main/default/objects/Contact/fields/IsMessageBirdContactSetup__c.field-meta.xml
<CustomField>
    <fullName>IsMessageBirdContactSetup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMessageBirdContactSetup</label>
    <type>Checkbox</type>
</CustomField>