force-app/main/default/objects/Contact/fields/MessageBirdContactId__c.field-meta.xml
<CustomField>
    <fullName>MessageBirdContactId__c</fullName>
    <externalId>true</externalId>
    <label>MessageBirdContactId</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>