force-app/main/default/objects/Contact/fields/MessageBirdConversationId__c.field-meta.xml
<CustomField>
    <fullName>MessageBirdConversationId__c</fullName>
    <externalId>true</externalId>
    <label>MessageBirdConversationId</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>