force-app/main/default/objects/Contact/fields/MessageBirdCountryCode__c.field-meta.xml
<CustomField>
    <fullName>MessageBirdCountryCode__c</fullName>
    <label>Message Bird Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MessageBirdCountryCodes</valueSetName>
    </valueSet>
</CustomField>