force-app/main/default/objects/Contact/fields/MessageBirdDisplayWindowConfiguration__c.field-meta.xml
<CustomField>
    <fullName>MessageBirdDisplayWindowConfiguration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MessageBirdDisplayWindowConfiguration</label>
    <type>Checkbox</type>
</CustomField>